# lasso-plot

./: .gitignore  README.md  heatmap.html  install_oh_my_zsh  install_rye  pairing_probabilities.csv  pairing_probabilities.parquet  pyproject.toml  scatter_matrix.html  scatter_matrix_with_probabilities.html  varclus_bootstrap_heatmap.html
.docker/: .dockerignore  compose.yml  fastapi.Dockerfile  next.Dockerfile
lasso-app/: package-lock.json  package.json
lasso-app/src/: global.d.ts
lasso-app/src/app/: page.tsx
lasso-app/src/components/: LassoPathPlot.component.tsx
mypy-report/: index.html
mypy-report/html/src/: app.py.html
mypy-report/html/src/app/: __init__.py.html  layout.py.html  (+1 more)
src/app/: Layout.py  __init__.py  _app_config.py  data.py  element_ids.py  layout.py  main.py
src/app/_types/: __init__.py
src/app/assets/: styles.css  tailwind.css  test.html
src/app/components/: SelectedSeriesScatterplot.py  dropdown.py  feature_dropdown.py  graph.py
src/app/config/: __init__.py  cache.py  models.py  security.py  store.py
src/app/scripts/: __init__.py  hideModebar.js  hide_modebar.py
src/cluster_features/: dev.ipynb  distance.py  hierarchical.py  queries.py
src/lasso_plot/: .env  api.py  app.py  constants.py  duck_db.py  embedded_plot.py  interfaces.py  lasso_logistic_model.py  lasso_path.py  lasso_path__creation.py  lasso_path__data.py  path.py  preprocessor.py
src/varclus/: __init__.py  data.html  dev.ipynb  interfaces.py  logger.py  network_analysis.py  network_analysis_app.py  pyproject.toml  varclus.py  varclus__OLD.py  varclus_bootstrap.py  varclus_v2.py
src/varclus/src/: _bootstrap.py  _clustering.py  _force_diagram.py  anclust_runner.py  clustering_algorithm.py  dimensionality_reduction_algorithm.py  varclus_bootstrap_runner.py  varclus_clusterer.py  varclus_runner.py
src/varclus/tests/: test_cluster_initializer.py  test_cluster_merger_splitter.py  test_integration__iris_data.py  test_integration__randomly_generated_classification_data.py  test_matrix_calculator.py  test_pca_handler.py  test_performance.py  test_varclus.py  test_varclus_plus_bootstrap.py  test_varclus_plus_bootstrap2.py
(+18 files in other folders)
