[project]
name = "lasso-plot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "plotly>=5.22.0",
    "pandas>=2.2.2",
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "fastapi>=0.111.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.0",
    "ruff-lsp>=0.0.54",
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "coverage>=7.5.4",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lasso_plot"]
