[project]
name = "lasso-plot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "plotly==5.18.0",
    "pandas==2.2.1",
    "polars==0.20.23",
    "duckdb>=0.10.1,<0.11.0",
    "fastapi>=0.111.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "scikit-learn==1.3.2",
    "ipykernel==6.26.0",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "matplotlib==3.8.1",
    "pyarrow==15.0.0",
    "pygwalker==0.4.8.5",
    "predictables @ git+http://github.com/predictables/predictables",
    "pyodbc>=5.1.0",
    "dash>=2.17.1",
    "flask-caching>=2.3.0",
    "bcrypt>=4.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.0",
    "ruff-lsp>=0.0.54",
    "mypy==1.9.0",
    "pytest>=8.0.0",
    "coverage==7.4.4",
    "pytest-cov==4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lasso_plot", "src/cluster_features", "src/varclus"]

